2006-06-10 Patrick Galbraith <patg@mysql.com) (3.0005)
  * Fix dbd_st_finish in 3.0004 didn't clean up bind buffers resulting in
    a memory leak. See eg/prepare_memory_usage.pl to see how this manifests
    itself. Thanks to Jason Snell for giving me a good script to reproduce
    this!
  * Fix to parse_params, mysql.xs dbh->do, and bind_param to deal with
    passing substr to "do" for placeholder value. Thanks Martin Waite for
    the patch to parse_params (extended to mysql.xs "do" and bind_param for
    server-side prepared statements.

2006-05-17 Patrick Galbraith <patg@mysql.com) (3.0004_1)
  * Fix dbd_st_finish which closed the handle prematurely (Martin Evans)
  * Compile issues (Martin Evans)
  * Small change to get utf8 data returned. One still has to:
      $dbh->do("set character set utf8");
      $dbh->do("set names utf8");

    to get utf8 back and even then you only get it back if the
    column is defined as utf8 in mysql.
  * Fix to dbd_bind_ph to deal with numbers (ints, floats) correctly
    (Alexey Stroganov)
  * Test changes - bind_param 41 and 42
  * Turned off 70takeimp test

2006-04-29 Patrick Galbraith <patg@mysql.com) (3.0003_1)
  * Removed old Msql-Mysql Driver emulation code - finally!!!
  * Removed aweful string testing code (that I wrote) for unsported
    statements and now use mysql_stmt_prepare, if statement not
    supported, toggle to mysql_emulated_prepare
  * Fixed bug where failed stmt execution caused later statements
    to fail with mysql_stmt_reset
  * Added tests for unsupported statements
  * Added test for test of failed statement with subsequent executes 
    (thanks to Martin Evans!)
  * Added typo fix (Martin Evans)
  * Added support for ParamValues and associated test (Martin Evans)
  * Removed old emulated driver tests (HOORAY!)
  * Cleaned up debug printing code
  * Fixed syntax for create table ENGINE=InnoDB instead of type=innobase
  * Cleaned up tests 

2006-01-31 Patrick Galbraith <patg@mysql.com> (3.0002_5)